# PulseMux-Single-node-Real-time-Telemetry-Processing-Engine

./: .gitignore  CMakeLists.txt  README.md
apps/: main.cpp
include/alerting/: cusumState.h
include/ingest/: readFile.h
include/parse_validate/: TimeContext.h  checkDuplicate.h  event.h  metricRegistry.h  normalize.h  parseEvent.h  rawEvent.h  typeConvertation.h  validateData.h  validateEvent.h
include/pipeline/: bootstrap.h  router.h  worker.h
include/windowing/: windowAggregator.h
src/ingest/: readFile.cpp
src/parse_validate/: checkDuplicate.cpp  metricRegistry.cpp  normalize.cpp  parseEvent.cpp  typeConvertation.cpp  validateData.cpp  validateDataError.cpp
src/pipeline/: bootstrap.cpp  router.cpp  worker.cpp
src/windowing/: windowAggregator.cpp
tests/: CMakeLists.txt
tests/parse_validate/: checkDuplicate.cpp  metricRegistry.cpp
